# threshold_signature_api

./: .gitignore  README.md
.github/workflows/: ci.yml
java/MusigDemo/: .project  README.md  local.properties  settings.gradle
java/MusigDemo/app/: build.gradle
java/MusigDemo/gradle/wrapper/: gradle-wrapper.properties
java/MusigDemo/musig2demo/: README.md  build.gradle
java/MusigDemo/musig2demo/src/main/: AndroidManifest.xml
java/MusigDemo/musig2demo/src/main/res/values/: strings.xml
java/MusigDemo/musig2sr25519demo/: README.md  build.gradle
java/MusigDemo/musig2sr25519demo/src/main/: AndroidManifest.xml
java/MusigDemo/musig2sr25519demo/src/main/res/values/: strings.xml
java/MusigDemo/musigdemo/: README.md  build.gradle
java/demo/: .project  pom.xml
java/demo/src/main/java/com/example/: App.java  Musig.java
js/: README.md  package.json
js/Musig/: package-lock.json  package.json
js/Musig/src/: libmusig_dll.dylib  libmusig_dll.rlib  musig.js
js/Musig2/: package-lock.json  package.json
js/Musig2/src/: libmusig2_dll.dylib  musig2.js
js/Musig2Demo/: README.md  package-lock.json  package.json
js/Musig2Demo/src/: musig2.js
js/Musig2Sr25519/: package-lock.json  package.json
js/Musig2Sr25519/src/: musig2sr25519.js
js/Musig2Sr25519Demo/: README.md  package-lock.json  package.json
js/Musig2Sr25519Demo/src/: musig2sr25519.js
js/MusigDemo/: README.md  package-lock.json  package.json
js/MusigDemo/src/: example.js  musig.js  musig2.js  musig2_demo.js
js/src/: example.js
musig-dll/: Cargo.toml  Makefile  Musig.java
musig-dll/src/: error.rs  lib.rs
musig2-dll/: Cargo.toml  Makefile  Musig2.h  Musig2.java
musig2-dll/src/: error.rs  lib.rs
musig2-sr25519-dll/: Cargo.toml  Musig2.h  Musig2.java
musig2-sr25519-dll/src/: error.rs  lib.rs
swift/Framework/Musig/Musig/: musig.swift
swift/Framework/Musig/Musig.xcodeproj/: project.pbxproj
swift/Framework/Musig/Musig.xcodeproj/project.xcworkspace/xcuserdata/daiwei.xcuserdatad/: UserInterfaceState.xcuserstate
swift/Framework/Musig/Musig.xcodeproj/xcshareddata/xcschemes/: Musig.xcscheme
swift/Framework/Musig/Musig.xcodeproj/xcuserdata/daiwei.xcuserdatad/xcschemes/: xcschememanagement.plist
swift/Framework/Musig2/Musig2/: musig2.swift
swift/Framework/Musig2/Musig2.xcodeproj/: project.pbxproj
swift/Framework/Musig2Sr25519/Musig2Sr25519/: musig2_sr25519.swift
swift/Framework/Musig2Sr25519/Musig2Sr25519.xcodeproj/: project.pbxproj
swift/Musig2Demo/: README.md
swift/Musig2Demo/Musig2Demo/: ViewController.swift
swift/Musig2Demo/Musig2Demo.xcodeproj/: project.pbxproj
swift/Musig2Demo/Musig2Demo.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
swift/Musig2Demo/Musig2Demo.xcodeproj/project.xcworkspace/xcuserdata/daiwei.xcuserdatad/: UserInterfaceState.xcuserstate
swift/Musig2Demo/Musig2Demo.xcodeproj/xcuserdata/daiwei.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
swift/Musig2Sr25519Demo/: README.md
swift/Musig2Sr25519Demo/Musig2Sr25519Demo/: ViewController.swift
swift/Musig2Sr25519Demo/Musig2Sr25519Demo.xcodeproj/: project.pbxproj
swift/Musig2Sr25519Demo/Musig2Sr25519Demo.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
swift/Musig2Sr25519Demo/Musig2Sr25519Demo.xcodeproj/project.xcworkspace/xcuserdata/daiwei.xcuserdatad/: UserInterfaceState.xcuserstate
swift/MusigDemo/: README.md
swift/MusigDemo/MusigDemo/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
swift/MusigDemo/MusigDemo.xcodeproj/: project.pbxproj
swift/MusigDemo/MusigDemo.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
swift/MusigDemo/MusigDemo.xcodeproj/project.xcworkspace/xcuserdata/daiwei.xcuserdatad/: UserInterfaceState.xcuserstate
swift/MusigDemo/MusigDemo.xcodeproj/xcuserdata/daiwei.xcuserdatad/xcschemes/: xcschememanagement.plist
swift/MusigDemo/MusigDemoTests/: MusigDemoTests.swift
swift/MusigDemo/MusigDemoUITests/: MusigDemoUITests.swift  MusigDemoUITestsLaunchTests.swift
swift/MusigDemo/MusigDll/: MusigDemo-Bridging-Header.h  musig.c  musig.h  musig.swift
(+13 files in other folders)
