[package]
name = "musig-dll"
authors = ['The ChainX Authors']
edition = "2018"
version = "0.1.0"

[lib]
# crate-type = ["lib", "staticlib"]
crate-type = ["cdylib"]

[dependencies]
schnorrkel = { git = "https://github.com/chainx-org/schnorrkel", branch = "master" }
mast = { git = "https://github.com/chainx-org/mast", branch = "main" }
hex = "0.4.3"
hex-literal = "0.3.1"
libc = "0.2"
merlin = "3.0"
