[package]
name = "musig-dll"
authors = ['The ChainX Authors']
edition = "2018"
version = "0.1.0"

[lib]
# crate-type = ["lib", "staticlib"]
crate-type = ["lib", "cdylib"]

[dependencies]
hex = "0.4.3"
hex-literal = "0.3.1"
libc = "0.2"
mast = { git = "https://github.com/chainx-org/mast", branch = "main" }
merlin = { git = "https://github.com/AAweidai/merlin.git", branch = "main" }
schnorrkel = { git = "https://github.com/chainx-org/schnorrkel", branch = "master" }
serde = { version = "1.0.123", default-features = false, optional = true }
serde_json = "1.0.68"

