[package]
name = "musig2-dll"
authors = ["The ChainX Authors"]
edition = "2018"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
#  crate-type = ["lib", "staticlib"]
crate-type = ["lib", "cdylib"]

[dependencies]
light-bitcoin = { git = "https://github.com/chainx-org/light-bitcoin", branch = "support-schnorr-test" }
musig2 = { git = "https://github.com/chainx-org/Musig2", branch = "lib" }
libc = { version = "0.2.0" }
hex = "0.4.3"
serde = { version = "1.0.123", default-features = false, optional = true }
serde_json = "1.0.68"

[dev-dependencies]
libsecp256k1 = { version = "0.3.5", default-features = false, features = ["hmac"] }
