[package]
name = "musig2-dll"
authors = ["The ChainX Authors"]
edition = "2018"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# crate-type = ["lib", "staticlib"]
crate-type = ["lib", "cdylib"]

[dependencies]
jni = "0.19.0"
libsecp256k1 = { version = "0.3.5", default-features = false, features = ["hmac"] }
light-bitcoin = { git = "https://github.com/chainx-org/light-bitcoin", branch = "taproot" }
musig2 = { git = "https://github.com/chainx-org/Musig2", branch = "lib" }
hex = { version = "0.4.3", default-features = false }
rand = { version = "0.8.4", default-features = false }
rand_core = { version = "0.6.3", default-features = false }
serde = { version = "1.0.123", default-features = false, optional = true }
serde_json = { version = "1.0.68", default-features = false, features = ["alloc"] }
bip0039 = { version = "0.9.0", default-features = false }